--- a/Base/10.111.111.75.md
+++ b/Base/10.111.111.75.md
@@ -75,4 +75,57 @@ document.write("<img src='" + _0x5491() + "'>");
 
 # TODO
 
-хз
+```
+ar sillydate = 0;
+var sillyvar = 0;
+
+function StringArray(lennn) {
+    this['length'] = lennn;
+    for (var i = 0; i < lennn; i++) {
+        this[i] = ' ';
+    }
+}
+
+image = new StringArray(10);
+image[0] = '4cbe8d_f1ed2800a49649848102c68fc5a66e53mv2.gif';
+image[1] = 'ad29187djkasdjha0291.png';
+image[2] = '4cbe8d_f1ed2800a49649848102c68fc5a66e53mv2.gif';
+image[3] = 'ad29187djkasdjha0291.png';
+image[4] = '4cbe8d_f1ed2800a49649848102c68fc5a66e53mv2.gif';
+image[5] = 'ad29187djkasdjha0291.png';
+image[6] = '4cbe8d_f1ed2800a49649848102c68fc5a66e53mv2.gif';
+image[7] = 'ad29187djkasdjha0291.png';
+image[8] = 'ad29187djkasdjha0291.png';
+image[9] = 'ad29187djkasdjha0291.png';
+
+var ran = 60 / image['length'];
+
+function date_ok() {
+    sillydate = new Date();
+    sillyvar = sillydate['getSeconds']();
+    sillyvar = Math['floor'](sillyvar / ran);
+    return image[sillyvar];
+}
+
+function main_ok(temp) {
+    var hmmmm = document.createElement('img');
+    hmmmm.src = '/' + temp;
+    document.body.appendChild(hmmmm);
+}
+
+//main_ok('1f2e73705207bd' + 'd6467e109c1606ed29' + '-' + '21213/'+ date_ok());
+document['write']("<img src='" + date_ok() + "'>");
+```
+
+(форг by utah, пишу что есть) 
+сверху обфусцированный ручками код, основной момент это коммент с funс **main_ok**, который генерит путь
+
+**http://10.111.111.75/1f2e73705207bdd6467e109c1606ed29-21213/ad29187djkasdjha0291.png**
+**http://10.111.111.75/1f2e73705207bdd6467e109c1606ed29-21213/4cbe8d_f1ed2800a49649848102c68fc5a66e53mv2.gif**
+
+одно из двух в зависимости от текущей секунды, функция **date_ok()** возвращает image[sillyvar], там либо png, либо gif 
+после перехода по линку, поподаете в дир, где лежат эти файлы. там есть сервис проверки номера по коду wp2fac
+
+source: https://github.com/metinyesil/wp2fac
+wp2fac -> OS Command Injection -> RCE 
+
